# AI-Clinical-Decision-Support-System

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
backend/: api.py  main.py
backend/agents/: global_state.py  graph.py
backend/agents/analyst/: config.yaml  prompts.py
backend/agents/analyst/data_mockups/: patients_mockup.py  reference_ranges_mockup.py
backend/agents/analyst/evaluation/: react_eval_results_20260215_165333.json  react_evaluation.py
backend/agents/analyst/nodes/: react.py
backend/agents/analyst/react_agent/: __init__.py  edges.py  nodes.py  prompts.py  run.py  test_react.py  tools.py
backend/agents/blood_test_analyst/: agent.py  config.yaml  run_batch.py
backend/agents/blood_test_analyst/data_mockups/: patients_mockup.py  reference_ranges_mockup.py
backend/agents/blood_test_analyst/nodes/: react.py
backend/agents/blood_test_analyst/react_agent/: __init__.py  edges.py  nodes.py  prompts.py  run.py  state.py  test_react.py  tools.py  utils.py
backend/agents/evidence_analyst/: __init__.py  config.yaml  edges.py  local_test.py  nodes.py  prompts.py  run.py  tools.py  utils.py
backend/agents/manager/: __init__.py  agent.py  config.yaml  edges.py  local_test.py  nodes.py  prompts.py  tools.py
backend/agents/shared/: config.py  state.py
backend/agents/skin_care_analyst/: __init__.py  agent.py  config.yaml  nodes.py  prompts.py  run.py  test_locally.py  tools.py
backend/agents/skin_care_analyst/demo_data/: ISIC_0024500.txt
backend/semantic_routing/: config.yaml  semantic_router.py
backend/supabase/: __init__.py  main.py  supabase_client.py
backend/tools/: medline_test_rag.py  prompts.py
backend/tools/config/: medline_test_rag_config.yaml
data_pipeline/src/: bm25_reitriver.py  estimate_cost.py  health_topic_xml_preprocess.py  ingest_medline_test_data.py  medline_encyclopedia_one_article_scraper.py  medline_encyclopedia_scraper.py  medline_test_one_article_scraper.py  utils.py
data_pipeline/src/scraping and preprocessing/: medline_encyclopedia_scraper.py  medline_test_scraping.py
evaluation/: run_rag_eval.py  run_rag_retrival_eval.py
evaluation/agents evaluation/: eval_dataset.py  eval_judge_base.py  eval_judge_routing.py  eval_judge_safety.py  eval_judge_task_completeness.py  eval_judge_tone.py  eval_judge_tool_selection.py  eval_judge_tool_sequencing.py  run_evaluation.py
evaluation/rag evaluation/: utils.py
frontend/: app.py
skin_care_classifier/: generate_custom_dataset.py
