[project]
name = "autonomousclinicalsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "razbi",email = "razhaim101@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=1.2.8,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false