[tool.poetry]
name = "autonomousclinicalsystem"
version = "0.1.0"
description = ""
authors = ["Raz Bismuth <razbismuth5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
supabase = "^2.12.0"
streamlit = "^1.42.0"
openai = "^1.63.2"


langgraph = "^0.2.72"
langchain-openai = "^0.3.5"
langchain = "^0.3.0"            # <-- שנה ל-0.3.0
langchain-community = "^0.3.0"  # <-- שנה ל-0.3.0
langchain-pinecone = "^0.2.0"   # <-- pinecone ל-langchain v0.3 הוא לרוב 0.2.0

requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pinecone = "^6.0.1"
ultralytics = "^8.3.79"

torch = {version = "*", source = "pytorch-cpu"}
torchvision = {version = "*", source = "pytorch-cpu"}


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"